--- a/index.html
+++ b/index.html
@@ -6,5 +6,13 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
+    <img src="./images/chef.jpg" width="300" alt="A drawing of the Chef!">
+    <h2>About</h2>
+    <p>Hello! This is a website containing a few handpicked recipes found on the Internet.
+       My name is Louie and I'll be your chef today!</p>
+    <h3>Recipes</h3>
+    <ul>
+      <li><p><a href="./recipes/tomato-mozzarella-salad.html">Tomato Mozzarela Salad</a></p></li>
+    </ul>
   </body>
 </html>
