--- a/recipes/tomato-mozzarella-salad.html
+++ b/recipes/tomato-mozzarella-salad.html
@@ -6,5 +6,29 @@
   </head>
   <body>
     <h1>Tomato Mozzarela Salad</h1>
+    <img src="../images/tomato-mozzarella-salad.jpg" width="500" alt="Picture of the Tomato Mozzarela Salad">
+    <h2>Description</h2>
+    <p>Tomato and mozzarella salad served with fresh basil and drizzled with olive oil... There's nothing better!</p>
+    <p>A perfect salad alternative, especially in summer when you can get tomatoes and basil from the garden.</p>
+    <h3>Ingredients</h3>
+    <ul>
+      <li>3 large tomatoes, sliced</li>
+      <li>8 ounces mozzarella cheese, sliced</li>
+      <li>¼ cup olive oil</li>
+      <li>¼ cup balsamic vinegar</li>
+      <li>¼ teaspoon salt</li>
+      <li>⅛ teaspoon ground black pepper</li>
+      <li>¼ cup minced fresh basil</li>
+    </ul>
+    <h3>Steps</h3>
+    <ol>
+      <li>Gather all ingredients.</li>
+      <li>Place tomato slices, alternating with mozzarella slices, on a large serving platter.</li>
+      <li>Combine oil, balsamic vinegar, salt, and pepper in a jar with a tight-fitting lid; shake well.</li>
+      <li>Drizzle over tomatoes and mozzarella; sprinkle with basil.</li>      
+    </ol>
+    <h3>Conclusion</h3>
+    <p>That's it! That's how you cook an incredible Tomato Mozzarela Salad!</p>
+    <p><a href="../index.html">Homepage</a></p>
   </body>
 </html>
