Add link to recipe image and fix a typo

--- a/recipes/tomato-mozzarella-salad.html
+++ b/recipes/tomato-mozzarella-salad.html
@@ -6,7 +6,9 @@
   </head>
   <body>
     <h1>Tomato Mozzarela Salad</h1>
-    <img src="../images/tomato-mozzarella-salad.jpg" width="500" alt="Picture of the Tomato Mozzarela Salad">
+    <a href="https://www.allrecipes.com/recipe/222659/tomato-mozzarella-salad/" target="_blank" rel="noopener noreferrer">
+      <img src="../images/tomato-mozzarella-salad.jpg" width="500" alt="Picture of the Tomato Mozzarela Salad">
+    </a>
     <h2>Description</h2>
     <p>Tomato and mozzarella salad served with fresh basil and drizzled with olive oil... There's nothing better!</p>
     <p>A perfect salad alternative, especially in summer when you can get tomatoes and basil from the garden.</p>
@@ -28,7 +30,7 @@
       <li>Drizzle over tomatoes and mozzarella; sprinkle with basil.</li>      
     </ol>
     <h3>Conclusion</h3>
-    <p>That's it! That's how you cook an incredible Tomato Mozzarela Salad!</p>
+    <p>That's it! That's how you make an incredible Tomato Mozzarela Salad!</p>
     <p><a href="../index.html">Homepage</a></p>
   </body>
 </html>
