Add link to ghost cheesecake brownies recipe

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <ul>
       <li><a href="./recipes/tomato-mozzarella-salad.html">Tomato Mozzarela Salad</a></li>
       <li><a href="./recipes/curried-egg-sandwiches.html">Curried Egg Sandwiches</a></li>
+      <li><a href="./recipes/ghost-cheesecake-brownies.html">Ghost Cheesecake Brownies</a></li>
     </ul>
   </body>
 </html>
