Add back to top of page link

--- a/recipes/tomato-mozzarella-salad.html
+++ b/recipes/tomato-mozzarella-salad.html
@@ -31,6 +31,7 @@
     </ol>
     <h3>Conclusion</h3>
     <p>That's it! That's how you make an incredible Tomato Mozzarela Salad!</p>
+    <p><a href="#top">Back to top of page</a></p>
     <p><a href="../index.html">Homepage</a></p>
   </body>
 </html>
