Add back to top of page link and changed alt desc

--- a/recipes/curried-egg-sandwiches.html
+++ b/recipes/curried-egg-sandwiches.html
@@ -7,7 +7,7 @@
   <body>
     <h1>Curried Egg Sandwiches</h1>
     <a href="https://www.allrecipes.com/recipe/104804/curried-egg-sandwiches/" target="_blank" rel="noopener noreferrer">
-      <img src="../images/curried-egg-sandwiches.jpg" width="500" alt="Curried Egg Sandwiches">
+      <img src="../images/curried-egg-sandwiches.jpg" width="500" alt="Picture of the Curried Egg Sandwiches">
     </a>
     <h2>Description</h2>
     <p>Delicious curried egg salad sandwiches guaranteed to fill you up!</p>
@@ -28,6 +28,7 @@
     </ol>
     <h3>Conclusion</h3>
     <p>This is how you can make your on delicious curried egg salad sandwiches!</p>
+    <p><a href="#top">Back to top of page</a></p>
     <p><a href="../index.html">Homepage</a></p>
   </body>
 </html>
