Add more to add in recipes list

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <li><a href="./recipes/tomato-mozzarella-salad.html">Tomato Mozzarela Salad</a></li>
       <li><a href="./recipes/curried-egg-sandwiches.html">Curried Egg Sandwiches</a></li>
       <li><a href="./recipes/ghost-cheesecake-brownies.html">Ghost Cheesecake Brownies</a></li>
+      <li>More to add...</li>
     </ul>
   </body>
 </html>
